<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#E9E9E9"
      android:orientation="vertical">

      <!-- Question 1 card -->
      <LinearLayout
         android:id="@+id/question1"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt1"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt1_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text1" />

         <CheckBox
            android:id="@+id/chk_opt1_1"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer1_opt1" />

         <CheckBox
            android:id="@+id/chk_opt1_2"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer1_opt2" />

         <CheckBox
            android:id="@+id/chk_opt1_3"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer1_opt3" />

         <CheckBox
            android:id="@+id/chk_opt1_4"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer1_opt4" />

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt1_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 1 card -->

      <!-- Question 2 card -->
      <LinearLayout
         android:id="@+id/question2"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt2"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt2_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text2" />

         <EditText
            android:id="@+id/txt_opt2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:hint="xxx.xxx.xxx.xxx"
            android:inputType="text"
            android:paddingRight="4dp" />

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt2_points"
            style="@style/GradingTextView"
            android:text="@string/str_2point" />
      </LinearLayout>
      <!-- End of question 2 card -->

      <!-- Question 3 card -->
      <LinearLayout
         android:id="@+id/question3"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt3"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt3_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text3" />

         <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
               android:id="@+id/rdb_opt3_1"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer3_opt1" />

            <RadioButton
               android:id="@+id/rdb_opt3_2"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer3_opt2" />

            <RadioButton
               android:id="@+id/rdb_opt3_3"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer3_opt3" />

            <RadioButton
               android:id="@+id/rdb_opt3_4"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer3_opt4" />
         </RadioGroup>

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt3_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 3 card -->

      <!-- Question 4 card -->
      <LinearLayout
         android:id="@+id/question4"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt4"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt4_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text4" />

         <CheckBox
            android:id="@+id/chk_opt4_1"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer4_opt1" />

         <CheckBox
            android:id="@+id/chk_opt4_2"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer4_opt2" />

         <CheckBox
            android:id="@+id/chk_opt4_3"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer4_opt3" />

         <CheckBox
            android:id="@+id/chk_opt4_4"
            style="@style/OptionCheckbox"
            android:text="@string/str_answer4_opt4" />

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt4_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 4 card -->

      <!-- Question 5 card -->
      <LinearLayout
         android:id="@+id/question5"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt5"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt5_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text5" />

         <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/network" />

         <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
               android:id="@+id/rdb_opt5_1"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer5_opt1" />

            <RadioButton
               android:id="@+id/rdb_opt5_2"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer5_opt2" />

            <RadioButton
               android:id="@+id/rdb_opt5_3"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer5_opt3" />

            <RadioButton
               android:id="@+id/rdb_opt5_4"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer5_opt4" />
         </RadioGroup>

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt5_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 5 card -->

      <!-- Question 6 card -->
      <LinearLayout
         android:id="@+id/question6"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt6"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt6_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text6" />

         <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
               android:id="@+id/rdb_opt6_1"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer6_opt1" />

            <RadioButton
               android:id="@+id/rdb_opt6_2"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer6_opt2" />

            <RadioButton
               android:id="@+id/rdb_opt6_3"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer6_opt3" />

            <RadioButton
               android:id="@+id/rdb_opt6_4"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer6_opt4" />
         </RadioGroup>

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt6_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 6 card -->

      <!-- Question 7 card -->
      <LinearLayout
         android:id="@+id/question7"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt7"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt7_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text7" />

         <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
               android:id="@+id/rdb_opt7_1"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer7_opt1" />

            <RadioButton
               android:id="@+id/rdb_opt7_2"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer7_opt2" />

            <RadioButton
               android:id="@+id/rdb_opt7_3"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer7_opt3" />

            <RadioButton
               android:id="@+id/rdb_opt7_4"
               style="@style/OptionRadioButton"
               android:text="@string/str_answer7_opt4" />
         </RadioGroup>

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt7_points"
            style="@style/GradingTextView"
            android:text="@string/str_1point" />

      </LinearLayout>
      <!-- End of question 7 card -->

      <!-- Question 8 card -->
      <LinearLayout
         android:id="@+id/question8"
         style="@style/QuestionCard"
         android:orientation="vertical">

         <TextView
            android:id="@+id/lbl_qt8"
            style="@style/QuestionTextView"
            android:text="@string/str_question" />

         <TextView
            android:id="@+id/lbl_qt8_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text8" />

         <TextView
            android:id="@+id/lbl_qt8_1_text"
            style="@style/QuestionTextTextView"
            android:text="@string/str_text8_1"
            android:textStyle="bold" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
               android:id="@+id/lbl_opt8_1"
               style="@style/QuestionTextTextView"
               android:layout_width="132dp"
               android:gravity="right"
               android:text="@string/str_answer8_opt1" />

            <EditText
               android:id="@+id/txt_opt8_1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:inputType="text"
               android:paddingRight="4dp" />

         </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
               android:id="@+id/lbl_opt8_2"
               style="@style/QuestionTextTextView"
               android:layout_width="132dp"
               android:gravity="right"
               android:text="@string/str_answer8_opt2" />

            <EditText
               android:id="@+id/txt_opt8_2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:inputType="text"
               android:paddingRight="4dp" />

         </LinearLayout>

         <View style="@style/SeparatorView" />

         <TextView
            android:id="@+id/lbl_qt8_points"
            style="@style/GradingTextView"
            android:text="@string/str_2point" />

      </LinearLayout>
      <!-- End of question 8 card -->

      <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:onClick="btnSubmitOnClick"
         android:text="Submit" />

   </LinearLayout>

</ScrollView>